--- a/task4 - TwoActivityLogin/res/layout/activity_second.xml
+++ b/task4 - TwoActivityLogin/res/layout/activity_second.xml
@@ -2,19 +2,20 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="match_parent">
  
-    <TextView 
+    <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/first_name"
-    	/>
+		/>
     
-    <EditText 
-        android:id="@+id/edit_text_first_name"
+    <EditText
+        android:id="@+id/first_name_output"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        />
+        android:editable="false"
+    	/>
  
     <TextView
         android:layout_width="match_parent"
@@ -23,28 +24,24 @@
         />
     
     <EditText
-        android:id="@+id/edit_text_last_name"
+        android:id="@+id/last_name_output"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
+        android:editable="false"
         />
  
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/birthday"
-		/>
+        android:text="@string/age"
+        android:singleLine="false"
+        />
     
     <EditText
-        android:id="@+id/edit_text_birthday"
-        android:layout_width="match_parent"
+    	android:id="@+id/age_output"
+		android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        />
- 
-    <Button
-        android:id="@+id/button"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/btn_label"
+        android:editable="false"
         />
  
 </LinearLayout>
